test/ui/lowering/intrinsic-declaration-with-explicit-body.stderr
error[E042]: intrinsic declarations may not have a body
  ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:3:1
  │
3 │ @intrinsic
  │ ────────── marks the declaration as being defined outside of the language
  │
  ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:4:11
  │
4 │ data Void of
  │           ══ the body specifying that the data type has no constructors and is therefore uninhabited
  │                       conflicting with the attribute

error[E042]: intrinsic declarations may not have a body
  ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:6:1
  │
6 │ @intrinsic
  │ ────────── marks the declaration as being defined outside of the language
  │
  ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:7:11
  │
7 │   data Unit of
  │ ╔═══════════╝
8 │ ║     unit: Unit
  │ ╚══════════════╝ the body containing a set of constructors
  │                           conflicting with the attribute

error[E042]: intrinsic declarations may not have a body
   ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:10:1
   │
10 │ @intrinsic
   │ ────────── marks the declaration as being defined outside of the language
   │
   ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:11:11
   │
11 │   data Bool of
   · ╔═══════════╝
13 │ ║     true: Bool
   │ ╚══════════════╝ the body containing a set of constructors
   │                           conflicting with the attribute

error[E042]: intrinsic declarations may not have a body
   ┌─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:15:1
   │
15 │ @intrinsic
   │ ────────── marks the declaration as being defined outside of the language
   │
   ├─ ${TEST_FOLDER}/lowering/intrinsic-declaration-with-explicit-body.lushui:16:12
   │
16 │ thing: Nat = 0
   │            ═══ the body conflicting with the attribute

error: aborting due to 4 previous errors

