test/ui/lowering/intrinsic-declaration-with-explicit-body.lushui
# TEST compiler-args -Z internals --no-core

@intrinsic
data Void of

@intrinsic
data Unit of
    unit: Unit

@intrinsic
data Bool of
    false: Bool
    true: Bool

@intrinsic
thing: Nat = 0
